# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Mar 2009; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.91.ebuild,
  emacs-cvs-23.0.9998.ebuild, emacs-cvs-23.0.9999-r1.ebuild:
  Depend on emacs-common-gentoo. Don't install subdirs.el.

*emacs-cvs-23.0.91 (07 Mar 2009)
*emacs-cvs-23.0.9999-r1 (07 Mar 2009)

  07 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +emacs-cvs-23.0.91.ebuild,
  +emacs-cvs-23.0.9999-r1.ebuild:
  Import from Portage tree.

  17 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
  emacs-cvs-23.0.9998.ebuild:
  Prefer aspell over ispell (sync with tree)

*emacs-cvs-23.0.9998 (08 Feb 2009)

  08 Feb 2009; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +emacs-cvs-23.0.9998.ebuild:
  Emacs lexical-binding branch.
