@@ -1,6 +1,6 @@
 DIST emacs-23.0.91.tar.gz 43011675 RMD160 dd0f93a06d3f1179d96ec32a91866ba4dadc4a27 SHA1 47df77669910c82eb1ef60d827235f11a486c2de SHA256 d0915f56a3c68090687d22a6f8d94f0e6edbf92c3600c746b512439863bf39fd
-EBUILD emacs-cvs-23.0.91.ebuild 8805 RMD160 296045c64bafa2e5cb40abe8a39ad18492bb019d SHA1 44417230c1b33115b051ac56293ac7c7756650f1 SHA256 5d3482eb9e98a12d5b7e3ebe179ad0e7a5e3c35634aa79ee8c50fdd5f2d07504
-EBUILD emacs-cvs-23.0.9998.ebuild 9042 RMD160 87e7a5896d99f0a50499dca3ebdf1d919d959bf7 SHA1 ea1583b43b8f8105e3f0be997d5bab87a1203500 SHA256 fcb193ddf281b8622d4bb3f21aa729a63d003e4c807f65c8a5feb22ff8fff8d5
-EBUILD emacs-cvs-23.0.9999-r1.ebuild 8805 RMD160 296045c64bafa2e5cb40abe8a39ad18492bb019d SHA1 44417230c1b33115b051ac56293ac7c7756650f1 SHA256 5d3482eb9e98a12d5b7e3ebe179ad0e7a5e3c35634aa79ee8c50fdd5f2d07504
-MISC ChangeLog 818 RMD160 8f1529129339ac4af1fbd1c1c4c99f35cbe5a901 SHA1 d2201622249318e1817127d67d0ad7a673e94d4e SHA256 7c63878ae8bb77bf2ea9b1338b837364f1d714ebb51b4fddb4e2b637f8848355
+EBUILD emacs-cvs-23.0.91.ebuild 8827 RMD160 f6d1551b23edb55249a60d2d744d53d72a841ee7 SHA1 e001ed0e1a373380a12d1a31419f39ec2444b0a1 SHA256 e988b613d4c72b2edb0a82a51b53db426ce89b3270e14c7d253b29c375457a91
+EBUILD emacs-cvs-23.0.9998.ebuild 9064 RMD160 279439f00d669ce2eea8980b2a53c5b5ab5ff860 SHA1 84080422875049881055034b5d11def9443fbbda SHA256 5fb425dff69cba39ab82c7cf902e148b360cc7b8f0c9239c54e76e74cfff7418
+EBUILD emacs-cvs-23.0.9999-r1.ebuild 8827 RMD160 f6d1551b23edb55249a60d2d744d53d72a841ee7 SHA1 e001ed0e1a373380a12d1a31419f39ec2444b0a1 SHA256 e988b613d4c72b2edb0a82a51b53db426ce89b3270e14c7d253b29c375457a91
+MISC ChangeLog 1043 RMD160 08b28feb6224c9babda63e80e10e72c2387ff4f5 SHA1 b430768add8d16299b9d71413c46f1a55492f106 SHA256 8d56d6e89b010ff9387be923f08e0da032982895359d05d05a3f2d6ed59e4d4a
 MISC metadata.xml 1529 RMD160 e40abfeff829d64e9f7d699d4e8fc5c4d6097bb5 SHA1 b2c01905cf0230739a45ad86bfbec800f8562c9f SHA256 b24dbef03ac32c182f69573275d416d664537eee2667e1e8c3199d4d34f3b20e
