@@ -6,7 +6,7 @@ DIST emacs-21.4-patches-6.tar.bz2 11785 RMD160 01edee136f6cd88611fa632227f685c1b
 DIST emacs-21.4a.tar.gz 20403483 RMD160 c312e739935b56d08783bbfe97992297a363cb8a SHA1 cdb33731180fe4a912838af805dd35e3f55394d4 SHA256 1d50ddae117c48d689a3d772e390569edccfdc22168be0112d2093bd2d7c3216
 DIST emacs-22.3.tar.gz 39587396 RMD160 a7eed5099d0cab25f34152f1b18b5c1b4e2e0746 SHA1 5e9b3e0205099a83be7198fd43ba1c9442a3feb0 SHA256 7bd9b719db8ee20c75ee0d256737f7fd2c0e2ea30a285a3afbfc32c856420d16
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
-EBUILD emacs-21.4-r17.ebuild 5208 RMD160 f03880805429c47cbc1950063de65b5c1a921844 SHA1 1216cf0511011599f39f61ced9edaca70ef4a93c SHA256 948ed858b08e0b4390add5da9775ec22056b2d6c0888cbe1f47bad7d68bdcab6
-EBUILD emacs-22.3-r2.ebuild 7799 RMD160 a63e3837c1b156a9fa88be40f48eee4aee9b5318 SHA1 9a207dd477a1560448a4eecd3265dcad79c2ac2e SHA256 08473dd02650acd0d9139adb69b6318c7e4c72a4eb6640d42d7709a92d789169
-MISC ChangeLog 858 RMD160 8a4a9252cd09c41f4c11c928a3d0e4a7dba1127e SHA1 b602c0d30d615e50cd1866c3f9bb02f8e438c6cd SHA256 3cc59f3099d603592e043de331cf8916e509d1a1e1f6acd7ed4eeee73b778950
+EBUILD emacs-21.4-r17.ebuild 5201 RMD160 d8fc0f9a4b3ea39fdb600b47e2da92c2d8a816eb SHA1 21465bc3826e9a1087b1aa66fce7e75f8ef751fe SHA256 3fe958b782969c5a0db8e17c174feeef98c0bacf1788acb24ec318596bf29229
+EBUILD emacs-22.3-r2.ebuild 7821 RMD160 175a316cfd196bc4f4879b710e2e14ae4b036086 SHA1 ff66a934f6487ed4fb125003701698bb50313fd7 SHA256 4fa2ac14b5f4b3c0c6c4520f290b418c8a1d198710a54020fdd005d5d905267f
+MISC ChangeLog 1123 RMD160 3baed4f97d3f262e984e3ee69e3edf1420cc6abb SHA1 6cf5d41b46c9e43bc48fb6351926bc517a184f5e SHA256 424b71f61570662a4df21fcbbefefbed3ff8943dbafa51b43d60bb1169490576
 MISC metadata.xml 1652 RMD160 d5b841ffd970ae6338f01b56bc354004a78a13e8 SHA1 3f19193ed03a37bc67644966c839ea738b21c976 SHA256 fa53ed0bd63c3dd37877f11aa0ac7e3811da9db6c90437176ab60d76329f0cd7
