@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Mar 2009; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r17.ebuild,
+  emacs-22.3-r2.ebuild:
+  Fix dependencies: xbitmaps is also needed at run time for
+  x-bitmap-file-path, whereas emacs-common-gentoo, aspell/ispell and
+  sendmail are not needed at build time.
+
   07 Mar 2009; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r17.ebuild,
   emacs-22.3-r2.ebuild:
   Depend on emacs-common-gentoo. Don't install subdirs.el.
